--- a/chrome/components/one_button-styles.css
+++ b/chrome/components/one_button-styles.css
@@ -1,108 +1,101 @@
 /* Source file made available under Mozilla Public License v. 2.0 See the main repository for updates as well as full license text. 
    https://github.com/Godiesc/firefox-one */
 
-/*Botones generales*/
-
-/* Information button */
-
-.panel-info-button{ margin-right: 6px !important;  }
-
-/* Radiobutton - Protección Antirastreo */
-
-.toggle-button:enabled { 
-    --toggle-background-color-pressed: var(--general-color) !important;
-}
-
 /*-------------------------- Marcadores - Arrowpanel ----------------------------------*/
 
-/*color Rojo de boton "borrar marcador"*/
+/* Bookmark popup dropdown colors */
 
-#editBookmarkPanelRemoveButton label{
-    display: none !important;
+panel menulist {
+    &:hover, 
+    &[open] {
+        background-color: var(--button-hover-bgcolor) !important;
+        color: var(--arrowpanel-color, var(--tab-selected-textcolor)) !important;
+        box-shadow: none !important;
+    }
 }
 
-#editBookmarkPanelRemoveButton{
-    background: url("../icons/delete.svg") no-repeat center/16px !important;
-    background-color: var(--input-border-color) !important;
-    fill: var(--toolbarbutton-icon-fill) !important;
+/* Border color (down arrow) */
+
+.hideable {
+    --button-background-color-hover: var(--button-hover-bgcolor) !important;
+}
+
+#editBookmarkPanel .expander-up, #editBookmarkPanel .expander-down {
+    border-color: transparent !important;
+}
+
+/* 'Save' & 'Remove' buttons */
+
+#editBookmarkPanelRemoveButton {
+    --button-background-color-hover: #da3633bb !important;
     -moz-context-properties: fill !important;
-    box-shadow: inset 0px 0px 0 1px var(--input-border-color) !important;
-    border-radius: 3px !important;
-    padding-inline: 16px !important;
+    fill: var(--toolbarbutton-icon-fill) !important;
+    
+    & label {
+        display: none !important;
+    }
 }
 
-#editBookmarkPanelRemoveButton:hover {
-    background-color: #da3633 !important;
-    color: #f0f6fc !important;
-    box-shadow: none !important;
-    fill: white !important;
-}
-
-/*color letras de boton "Guardar" marcador en :hover*/
-
-#editBookmarkPanelBottomButtons>#editBookmarkPanelDoneButton {   
-    color: white !important;
-    border-radius: 4px !important;
-}
-
-/*Color de "highlight" inputtext*/
-
-richlistitem[selected="true"], #editBMPanel_namePicker::selection , #editBMPanel_tagsField::selection{
-    background-color: var(--general-color) !important;
-    color: #ffffff !important;
-}
-
-richlistitem, #editBMPanel_namePicker , #editBMPanel_tagsField{
-    color: var(--lwt-tab-text) !important;
-}
-
-/* Color del botón menú deplegable - Color -fondo y borde-(flecha hacia abajo)*/
-
-panel menulist, panel menulist:not([open]),
-#editBookmarkPanel .expander-up, #editBookmarkPanel .expander-down{
-    background-color: var(--input-border-color) !important;
-    box-shadow: inset 0px 0px 0 1px var(--input-border-color) !important;
-    border-radius: 3px !important;
-    border: none !important;
-}
-
-panel menulist:hover, panel menulist[open],
-#editBookmarkPanel .expander-up:hover, #editBookmarkPanel .expander-down:hover{
-    background-color: var(--general-color) !important;
-    color: #ffffff !important;
-    box-shadow: none !important;
-}
-
-/* Color -fondo y "letras" - menu desplegable flecha*/
-
-#editBMPanel_folderTree, #editBMPanel_tagsSelector{
-    border-color: var(--arrowpanel-border-color) !important;
-}
+/* Background and Border Color in items (Dropdown Menu) */
 
 treechildren::-moz-tree-row(selected) {
+    outline-color: transparent !important;
+}
+
+#editBMPanel_folderTreeRow treechildren::-moz-tree-row(selected) {
     background-color: var(--button-active-bgcolor) !important;
-    outline: none !important;
 }
 
 treechildren::-moz-tree-image(selected), treechildren::-moz-tree-twisty(selected), treechildren::-moz-tree-cell-text(selected) {
-    color: var(--arrowpanel-color, var(--lwt-tab-text)) !important;
+    color: currentColor !important;
 }
 
-#editBMPanel_folderTree treechildren{
-    background-color: var(--arrowpanel-background) !important;
-    color: var(--arrowpanel-color, var(--lwt-tab-text)) !important;
+#editBMPanel_folderTree,
+#editBMPanel_tagsSelector {
+    background-color: var(--input-bgcolor, Field) !important;
+    border-color: var(--input-border-color, Field) !important;
 }
 
-#editBMPanel_tagsSelector{
-    background-color: var(--arrowpanel-background) !important;
-    border: 1px solid var(--button-bgcolor) !important;
+/* Bookmark dropdown menu when 'open' -Heart icon- */
+
+/* 'highlight' color of input-box */
+
+richlistitem[selected="true"], 
+#editBMPanel_namePicker,
+#editBMPanel_locationField,
+#editBMPanel_tagsField {
+    &::selection {
+        color: var(--contrast-color) !important;
+    }
+}
+
+/* Show keyword box when bookmark a website */
+
+.editBMPanel_locationRow, .editBMPanel_keywordRow{
+    visibility: visible !important;
+    display: block !important;
+}
+
+/* Gradient in button'Firefox Profiler' > 'info' button */
+
+#PanelUI-profiler-header {
+    &[isinfocollapsed="false"] {
+        background: radial-gradient(circle farthest-side at top left, var(--button-active-bgcolor), var(--button-hover-bgcolor)) !important;
+        border-radius: calc(var(--arrowpanel-border-radius) - 2px) !important;
+    }
+}
+
+/* Remove unwanted margin in 'extensions' buttons */
+
+toolbar .toolbaritem-combined-buttons {
+  margin-inline: 0px !important;
 }
 
 /* --------------------------- Barra de pestañas -------------------------------- */
 
 toolbarbutton.bookmark-item:not(.subviewbutton, [disabled="true"]):is([open],:active, :hover) {
-    color: var(--lwt-tab-text) !important;  
-    fill:  var(--lwt-tab-text) !important; 
+    color: var(--tab-selected-textcolor) !important;  
+    fill:  var(--tab-selected-textcolor) !important; 
 }
 
 /* Alinear botones de la barra de pestañas */
@@ -121,20 +114,13 @@ toolbarbutton.bookmark-item:not(.subviewbutton, [disabled="true"]):is([open],:ac
 /* botón >> ALL tabs */
 
 .all-tabs-item {
-    margin-inline: 0px !important;
     border-radius: var(--arrowpanel-menuitem-border-radius) !important;
 }
 
-.all-tabs-secondary-button{
-    margin-inline-end: 4px !important;
-    border-radius: var(--toolbarbutton-border-radius) !important;
-    border: none !important;
-    width: 30px !important;
-}
+/* Groups icon color in 'List all tabs' button */
 
-.all-tabs-secondary-button .toolbarbutton-icon{
-    width: 14px !important;
-    height: 14px !important;
+.subviewbutton-iconic.tab-group-icon-closed>image {
+  color: light-dark(var(--tab-group-color), var(--tab-group-color)) !important;
 }
 
 /* botón >> Unified extentions */
@@ -158,11 +144,11 @@ toolbarbutton.bookmark-item:not(.subviewbutton, [disabled="true"]):is([open],:ac
 .unified-extensions-item-menu-button:is(panelview .toolbarbutton-1, toolbarbutton.subviewbutton, .widget-overflow-list .toolbarbutton-1, 
 .toolbaritem-combined-buttons:is(:not([cui-areatype="toolbar"]), [overflowedItem="true"]) > toolbarbutton):not([disabled]) {
     background: transparent !important;
-    padding: 0px 6px !important;
+    padding-block: 0px !important;
 }
 
 .unified-extensions-item-menu-button.subviewbutton.subviewbutton-iconic:hover image {
-    background: var(--general-color) !important;
+    background: var(--button-bgcolor) !important;
     border-radius: var(--toolbarbutton-border-radius) !important;
 }
 
@@ -203,11 +189,27 @@ toolbarbutton.bookmark-item:not(.subviewbutton, [disabled="true"]):is([open],:ac
 
 /* Status panel */
 
-#statuspanel label{
-    background-color: var(--toolbar-bgcolor) !important;
-    color: var(--toolbar-color) !important;
-    border-color: var(--lwt-frame) !important;
-    border-radius: 0 8px 0 6px !important;
+#statuspanel label {
+    background-color: var(--lwt-accent-color) !important;
+    color: currentColor !important;
+    border: 1px solid var(--toolbarbutton-hover-personal) !important;
+    border-radius: 0 8px 0 8px !important;
+}
+
+/* Delete style when 'sidebar' button change to 'active' */
+
+#sidebar-button {
+    --toolbarbutton-active-background: transparent !important;
+
+    &[checked] {
+        @media -moz-pref("sidebar.revamp") {
+            list-style-image: url("chrome://browser/skin/sidebar-collapsed.svg") !important;
+        }
+
+        &:hover {
+            --toolbarbutton-active-background: var(--toolbarbutton-hover-background) !important;
+        }
+    }
 }
 
 /* ---------------------------------------------- Used for various smooth transition ---------------------------------------------- */
@@ -228,7 +230,7 @@ panel :is(menulist, button, toolbarbutton:not(#firefox-view-button,[.subviewbutt
 
 #identity-box[pageproxystate="valid"].chromeUI #identity-icon,
 #pageAction-panel-bookmark[starred], #star-button[starred],
-#urlbar-input-container #tracking-protection-icon{ 
+#urlbar-input-container #tracking-protection-icon { 
     transition: fill 0.2s ease !important;
 }
 
@@ -236,4 +238,12 @@ panel :is(menulist, button, toolbarbutton:not(#firefox-view-button,[.subviewbutt
 
 #urlbar box, #page-action-buttons hbox { 
     transition: background-color 0.2s ease !important;
+}
+
+/* Transition tab 'hover' */
+
+.tab-background {
+    .tabbrowser-tab > .tab-stack > &:not([selected], [multiselected]) {
+        transition: background-color 0.2s ease !important;
+    }
 }
