--- a/chrome/components/one_customize-styles.css
+++ b/chrome/components/one_customize-styles.css
@@ -1,37 +1,76 @@
 /* Source file made available under Mozilla Public License v. 2.0 See the main repository for updates as well as full license text. 
    https://github.com/Godiesc/firefox-one */
 
-/*---------------------------Página -> "Personalizar Toolbar---------------------------*/
+/* Page -> 'Customize the toolbar' */
 
-/*"Color de fondo e íconos en "Perzonalizar barra de herramientas"*/
-#customization-container {color: var(--lwt-text-color) !important; background-color: var(--toolbar-bgcolor) !important;} 
+#customization-container {
+    background-color: transparent !important;
+} 
 
 #customization-footer .footer-button:not(#customization-done-button,:hover,:active,[open]) {
     appearance: none !important;
-    background-color: var(--toolbarbutton-hover-personal) !important;
-    border-color: var(--toolbarbutton-hover-personal) !important;
-    color: var(--lwt-tab-text) !important;
 }
 
 #customization-done-button {
     appearance: none !important;
-    color: white !important;
+    color: var(--tab-selected-textcolor) !important;
     border-color: var(--button-hover-bgcolor) !important;
     background-color: var(--button-hover-bgcolor) !important;
     padding: 2px 24px !important;
 }
 
-#customization-footer .footer-button:is([open],:hover), 
-#customization-done-button:is(:active, :hover):not([disabled]) {
-    appearance: none !important;
-    color: white !important;
-    background-color: var(--button-active-bgcolor) !important;
-    border-color: var(--button-active-bgcolor) !important;
+#customization-footer {
+    
+    border-color: var(--my-content-border-color) !important;
+    
+  & > .footer-button:hover {
+      background-color: var(--button-bgcolor) !important;
+      color: initial !important;
+    }
+    
+    & .footer-button:is([open]),
+    & #customization-done-button:is(:active, :hover):not([disabled]) {
+        appearance: none !important;
+        color: var(--tab-selected-textcolor) !important;
+        background-color: var(--button-active-bgcolor) !important;
+        border-color: var(--button-active-bgcolor) !important;
+    }
 }
 
-/* Menú de desbordamiento*/
-.panel-arrowcontent { border-radius: 12px !important; margin-right: 0px !important; padding-right: 0px !important; }
-#customization-panel-container{  padding-right: 2px !important; }
+/* Overflow panel    */
+
+#customization-panel-container {
+    --customization-panel-padding: 2px !important;
+}
+
+#customization-panelWrapper {
+    & > .panel-arrowcontent {
+        @media not (-moz-platform: macos) {
+            border-radius: var(--my-toolbar-border-radius) !important;
+        }
+    }
+}
+
 #customization-panelWrapper > .panel-arrowbox > .panel-arrow[side="top"] {
-    margin-inline-end: calc(var(--panel-arrow-offset) - var(--customization-panel-padding) + 10px) !important; 
+    /* This variable used for oneline config ¯v */
+    margin-inline-end: calc(var(--uc-window-control-width, 8px) + var(--customization-panel-padding)) !important;
+    filter: drop-shadow(0px -1px 0px var(--input-border-color));
+}
+
+/* In [customization] - Align overflow arrow with its button when using 'Tree-tabs' */
+
+@media -moz-pref("firefoxone.tree_tabs_style"), -moz-pref("sidebar.verticalTabs") {
+    @media not (-moz-gtk-csd-reversed-placement) {
+        #customization-panelWrapper > .panel-arrowbox > .panel-arrow[side="top"] {
+            margin-inline-end: calc(var(--uc-window-control-width, 156px) - 6px + var(--customization-panel-padding)) !important;
+        }
+    }
+}
+
+#customization-panelHolder {
+  & > #widget-overflow-fixed-list {
+    &:not(:empty) {
+      border-top: 1px solid var(--input-border-color) !important;
+    }
+  }
 }
