--- a/chrome/components/one_notifications.css
+++ b/chrome/components/one_notifications.css
@@ -1,7 +1,8 @@
 /* Source file made available under Mozilla Public License v. 2.0 See the main repository for updates as well as full license text. 
    https://github.com/Godiesc/firefox-one */
 
-/* -------------------------------- Notifs - warnings - dialogos del navegador ------------------------------- */
+/* _____________________________________________ Notifs - warnings - and browser dialogs ______________________________________________
+   ¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯ */
 
 /* Position */
 
@@ -47,13 +48,15 @@ browser[primary="true"][tabDialogShowing="true"], .dialogOverlay[topmost="true"]
 
 .dialogBox:not(.spotlightBox), #commonDialog, .dialogFrame {
     border-radius: 10px !important;
-        box-shadow: inset 0 0px 0px 1px #50505090  !important;
+    box-shadow: 0 0px 0px 1px var(--contrast-color) !important;
 }
 
 .dialogBox:not(.spotlightBox) {
+    margin-block-start: 8px !important;
     border-radius: 10px !important;
     overflow-x: unset !important;
-    outline: 1px solid var(--contrast-color) !important;
+    outline: 1px solid var(--general-color) !important;
+    outline-offset: -1px !important;
 }
 
 /* Quitar fondo indeseado tras notificación en "about:" pages*/
@@ -129,7 +132,8 @@ dialog[subdialog], :root[dialogroot]{
     --checkbox-checked-active-bgcolor: var(--button-active-bgcolor) !important;         
 }
 
-/* HTML5 dark mode web notifs */
+/* ____________________________________________________ HTML5 dark mode web notifs ____________________________________________________
+   ¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯ */
 
 @-moz-document url("chrome://global/content/alerts/alert.xhtml") {
     @media (prefers-color-scheme: dark){
@@ -167,5 +171,81 @@ dialog[subdialog], :root[dialogroot]{
     #alertImage {
         border-radius: 4px !important;
     }
+    }
+}
+
+/* ____________________________________________ Information - Warnings above the web page _____________________________________________
+   ¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯ */
+
+@media (not -moz-pref("firefoxone.style_without_leftsidebar")) and (not -moz-pref("browser.toolbars.bookmarks.visibility", 'always')),
+-moz-pref("firefoxone.verticalTabs-expandOnHover") and -moz-pref("sidebar.visibility", 'expand-on-hover') {
+    
+    /* animación */
+
+    @keyframes messageappeardisappear{
+        0%{ opacity: 1 }
+        80%{ opacity: 1 }
+        100%{ opacity: 0 }}
+
+    /* Warning when using Left-sidebar style without the bookmarks toolbar set to 'Always show' */
+
+    :root:not([chromehidden~="toolbar"],[inFullscreen]) {
+        #tabbrowser-tabbox:after {
+            position: absolute;
+            content: 'Use this shortcut: < Ctrl + Shift + B > to show/hide the "Left Sidebar"';
+            width: contain;
+            opacity: 0;
+            padding-block: 2px;
+            padding-inline: 5px;
+            align-self: center;
+            justify-content: center;
+            text-align: center;
+            text-shadow: none;
+            font-size: 1.05em;
+            font-weight: 501;
+            background-color: var(--general-color);
+            color: var(--contrast-color);
+            box-shadow: inset 0 0 0 1px var(--tab-selected-textcolor), inset 0 0 0 2px var(--contrast-color);
+            z-index: 3;
+            animation: messageappeardisappear linear 5s;
+        }
+    }
+    
+    /* Warning when using the both features 'expand-on-hover' */
+    
+    @media -moz-pref("firefoxone.verticalTabs-expandOnHover") and -moz-pref("sidebar.visibility", 'expand-on-hover') {
+         :root:not([chromehidden~="toolbar"],[inFullscreen]) {
+             #tabbrowser-tabbox:after {
+                 background-color: var(--red);
+                 content: '❌ "Please keep only one "expand on hover" feature enabled, do not use both at the same time. ';
+                 animation-duration: 20s ;
+             }
+         }
+     }
+}
+
+/* Infobar displayed under navbar */
+
+#notifications-toolbar  {
+    position: fixed !important;
+    top: calc(var(--tab-height-personal) + var(--toolbar-height-personal) + var(--bookmarksbar-height-personal, 0px)) !important;
+    background-color: var(--arrowpanel-background) !important;
+    z-index: 3 !important;
+    align-self: center !important;
+    
+    @media (not -moz-pref("firefoxone.style_without_leftsidebar")) {
+        --bookmarksbar-height-personal: 0px !important;
+    }
+    
+    @media -moz-pref("firefoxone.tree_tabs_style"), -moz-pref("sidebar.verticalTabs") {
+        top: calc(var(--toolbar-height-personal) + var(--bookmarksbar-height-personal, 0px)) !important;
+    }
+    
+    &  .infobar.animated {
+        background-color: var(--arrowpanel-background) !important;
+        border-color: transparent !important;
+        outline: 1px solid var(--general-color) !important;
+        outline-offset: 1px;
+        border-radius: 2px !important;
     }
 }
