--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -1,11 +1,10 @@
 /* Source file made available under Mozilla Public License v. 2.0 See the main repository for updates as well as full license text. 
-   https://github.com/Godiesc/firefox-gx */
+   https://github.com/Godiesc/firefox-one */
 
 /* ############# Required files ############## */
 
 @import url('components/one_root.css');
 @import url('components/one_root-personal.css');
-@import url('components/one_toolbar-icons.css');
 @import url('components/one_containers.css');
 @import url('components/one_tabs-bar.css');
 @import url('components/one_urlbar-searchbar.css');
@@ -18,10 +17,16 @@
 @import url('components/one_close-button.css');
 @import url('components/one_button-styles.css');
 @import url('components/one_library.css');
-@import url('components/one_hamburger-menu-icons.css');
-@import url('components/one_menu.css');
+@import url('components/one_hamburger-menu.css');
+@import url('components/one_icons.css');
 @import url('components/one_left-sidebar.css');
+
+/* ############## Extra Files ###############  */
+
 @import url('components/one_tree-tabs.css');
 @import url('components/one_tree-tabs-expandOnHover.css');
 @import url('components/one_optional-features.css');
+
+/* ############# Your Personal File ##############  */
+
 @import url('components/one_tricks.css');
