--- a/Sidebery-insideConfig.css
+++ b/Sidebery-insideConfig.css
@@ -1,42 +1,36 @@
 #root.root {
+    --s-frame-bg: transparent !important;
     --tabs-border-radius: 6px;   /* Tabs raundness */
     --tabs-indent: 22px;
     padding-block: 4px;
 }
 
-/* Remove unwanted background color in some elements */
+/* Toolbar background */
 
-.TabsPanel .bottom-space,
-.TabsPanel .new-tab-btns::after {
-		background: transparent;
+@media (prefers-color-scheme: dark) { :root { 
+    --my-toolbar-bgcolor: #1e1e2f; }}
+
+@media (prefers-color-scheme: light) { :root {
+    --my-toolbar-bgcolor: #f9f9f9bc; }}
+
+:root {
+    background-color: transparent !important;
+    --toolbar-bgcolor: color-mix(in srgb, var(--my-toolbar-bgcolor), transparent var(--brightness-toolbar)) !important;
 }
 
 /* Trick to clic on border */
 
 body::before {
     content: ''; display: flex; position: fixed;
-    width: 100%; 
-    height: 100%;
+    width: calc(100% - 4px);
+    height: calc(100% + 0px);
+    margin-inline-start: 4px;
     border-radius: 8px !important;
     background-size: auto 100% !important;
-    background-color: var(--s-toolbar-bg);/**/
-    box-shadow:1px 0 var(--s-frame-bg), inset -1px 0 var(--s-frame-bg),1px 0 var(--s-frame-bg), inset -1px 0 var(--s-frame-bg),1px 0 var(--s-frame-bg), inset -1px 0 var(--s-frame-bg),inset 4px 0 var(--s-frame-bg),inset 5px 0 #50505040,inset 1px 0 var(--s-frame-bg),inset 1px 0 var(--s-frame-bg),inset 1px 0 var(--s-frame-bg),inset -4px 0 var(--s-frame-bg),inset -5px 0 #50505040,inset 0 1px #50505040,inset 0 -1px #50505040;
-    z-index: 10;
+    background-color: color-mix(in srgb, var(--toolbar-bgcolor), transparent 30%);
     pointer-events: none;
-}
-
-/* Remove some elements when sidebar isn't expanded */
-
-body:not(:hover) {
-	.Tab .title { 
-    opacity: 0;
-	}
-	.NavigationBar .nav-item[data-active="false"] {
-		display: none;
-	}
-	.NavigationBar[data-layout="inline"] .main-items .nav-item {
-		transform: none;
-	}
+    outline: 1px solid #60606050;
+    outline-offset: -1px;
 }
 
 /* __________________ Top horizontal box */
@@ -47,7 +41,7 @@ body:not(:hover) {
 
 .NavigationBar.-top {
     background-color: transparent;
-    width: calc(var(--uc-sidebar-hover-width) - 18px);
+    width: calc(var(--uc-sidebar-hover-width) - 14px);
     box-shadow: none; 
 }
 
@@ -79,19 +73,19 @@ body:not(:hover) {
 /* Tab selected background */
 
 .Tab {
+    --tabs-activated-bg: color-mix(in srgb, var(--toolbar-bg) 80%, transparent);
+}
+
+.Tab {
+width: calc(100% + 4px);
     --tabs-activated-bg: color-mix(in srgb,var(--s-popup-bg), var(--s-popup-fg) 20%);
 }
 
 /* Selected Tab border */
 
 .Tab[data-active="true"] .body {
+    --tabs-activated-bg: color-mix(in srgb, var(--toolbar-bg) 80%, transparent);
     --tabs-activated-shadow: var(--nav-btn-active-shadow);
-}
-
-/* Hide tab title when sidebar is not expaded */
-
-body:not(:hover) .Tab .title { 
-    opacity: 0;
 }
 
 /* Remove close button to solve glitch when first 'hover' on tab */
@@ -111,7 +105,7 @@ body:not(:hover) .Tab .title {
 }
 
 .ScrollBox > .bottom-shadow {
-		left: 12px;
+    left: 12px;
     width: calc(100% - 24px);
 }
 
@@ -122,22 +116,21 @@ body:not(:hover) .Tab .title {
 }
 
 .PinnedTabsBar {
-    --my-tabs-pinned-width: calc(var(--uc-sidebar-width) - 16px);
+    --my-tabs-pinned-width: calc(var(--uc-sidebar-width) - 10px);
     min-width: var(--uc-sidebar-hover-width);
     max-width: var(--uc-sidebar-hover-width);
     padding-inline-start: 8px !important;
     margin-block: 4px 2px;
-		background: transparent;
+    background: transparent;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(var(--my-tabs-pinned-width), var(--my-tabs-pinned-width))) !important;
-
-		.close {
-			display: none;
-		}
+	.close {
+	    display: none;
+	}
 }
 
 .PinnedTabsBar::after {
-background: transparent;
+    background: transparent;
 }
 
 /* Pinned selected tab always showed */
@@ -161,7 +154,7 @@ body:not(:hover) .PinnedTabsBar .tab-wrapper:has(.Tab[data-active="true"]) {
 
 .TabsPanel.panel>.ScrollBox .Tab {
     margin-inline: 0 ;
-    padding-inline: 8px 8px !important;
+    padding-inline: 8px 9px !important;
 }
 
 /* Remove indent tab [0] */
@@ -200,20 +193,23 @@ body:hover .ScrollBox .Tab[data-lvl]:not([data-lvl="0"]) {
     padding: 0px ;
     margin-inline: 0px;
     grid-gap: 0;
+	svg {
+            margin-inline-start: 2px !important;
+	}
 
     &::before {
         content: ''; display: flex; position: absolute; 
-        top: 0;
-        left: 8px;
-        width: calc(100% - 16px); 
-        height: 100%;
+        top: 4px;
+        left: 10px;
+        width: calc(100% - 17px); 
+        height: 70%;
         border-radius: 4px !important;
         background-size: auto 100% !important;
-        background-color: var(--s-toolbar-bg);
+        background-color: color-mix(in srgb, var(--toolbar-bgcolor)80%, var(--s-popup-fg)) !important;
     }
 
     &:hover::before {
-        background-color: color-mix(in srgb, var(--s-toolbar-bg)90%, var(--s-popup-fg));
+        background-color: color-mix(in srgb, var(--toolbar-bgcolor)60%, var(--s-popup-fg)) !important;
     }
 
     & .new-tab-btn:hover::before {
@@ -254,24 +250,3 @@ body:hover .ScrollBox .Tab[data-lvl]:not([data-lvl="0"]) {
 .ScrollBox {
     width: calc(100% + 1px);
 }
-
-/* _______________________ Image in sidebar _______________________  */
-
-/*
-
-body::before {
-    background-image: url("https://i.imgur.com/bcEfb0j.png"); !important;
-}
-
-.Tab {
-    --tabs-activated-bg: color-mix(in srgb, var(--s-popup-bg) 60%, transparent);
-}
-
-.TabsPanel .new-tab-btns {
-
-    &::before {
-        background-color: color-mix(in srgb, var(--s-toolbar-bg)80%, transparent);
-    }
-}
-
-/**/
